swagger doc for update current-user endpoint fix
